# avro-datagen

./: .env.sample  .gitignore  .pdm-python  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  docs.yml  publish.yml
docs-site/: api.md  design.md  getting-started.md  how-it-works.md  index.md
docs-site/deployment/: kafka-pipe.md  kafka-producer-app.md  streamlit-ui.md
docs-site/schemas/: arg-properties.md  examples.md  faker.md  writing-schemas.md
schemas/: example3.avsc  sample.avsc  transaction.avsc
src/avro_datagen/: __init__.py  app.py  cli.py  generator.py  producer.py  resolver.py  validator.py
src/avro_datagen/.streamlit/: config.toml
src/avro_datagen/schemas/: example.avsc  sample.avsc
tests/: test_cli.py  test_generator.py  test_resolver.py  test_validator.py
tests/fixtures/: example.avsc  faker_fields.avsc
