[project]
name = "avro-datagen"
version = "0.2.6"
description = "Schema-driven fake data generator for Avro schemas with arg.properties hints"
authors = [
    {name = "Edwin Stoltz", email = "edwinstoltz.es@gmail.com"},
]
dependencies = ["faker>=37.0.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ConsciousExplorer/avro-datagen"
Documentation = "https://consciousexplorer.github.io/avro-datagen/"
Source = "https://github.com/ConsciousExplorer/avro-datagen"
Issues = "https://github.com/ConsciousExplorer/avro-datagen/issues"

[project.scripts]
avro-datagen = "avro_datagen.cli:main"
avro_datagen = "avro_datagen.cli:main"

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.8.0"]
ui = ["streamlit>=1.45.0", "python-dotenv>=1.1.0"]
app = ["avro-datagen[kafka,ui]"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "ruff>=0.11.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avro_datagen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["avro_datagen"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["avro_datagen"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests", "src/avro_datagen/producer.py", "src/avro_datagen/app.py", "src/avro_datagen/cli.py"]
